# CANtou

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  go.mod  go.sum  main.py  pyproject.toml  simulate.sh
cmd/server/: main.go
config/prometheus/: prometheus.yml
dbcs/Ford/: lincoln_mkz.dbc
dbcs/InfinitiG37/: infiniti.dbc
internal/app/: app.go  app_test.go
internal/config/: args.go  args_test.go  flags.go  flags_test.go
internal/models/: app.go  (+7 more)
plans/: prometheus-output-client.md
stories/: 013-2414-complete-P2-json-unmarshal-error-ignored-in-dedup.md  014-54f8-complete-P2-csv-write-flush-errors-silently-ignored.md  015-0ffe-complete-P2-mqtt-json-marshal-error-ignored.md  016-759a-complete-P2-receiver-discontinue-ignores-close-error.md  017-7e36-complete-P2-receiver-busy-spins-on-error.md  021-680e-complete-P2-defer-flush-in-csv-constructor.md  022-1223-complete-P2-mqtt-filter-logs-at-error-level.md  023-694b-complete-P2-dedupe-storage-map-unbounded-growth.md  024-5a27-complete-P2-json-round-trip-in-dedupe-hot-path.md  025-7302-complete-P2-mqtt-publish-synchronous-per-message.md  026-12e4-complete-P2-csv-flush-syscall-per-frame.md  029-225b-complete-P2-deduper-interface-dead-code.md  030-3f0c-complete-P2-csv-can-message-struct-never-used.md  031-59c3-complete-P2-csv-message-block-field-never-used.md  032-4c94-complete-P2-dbc-parser-timeout-param-unused.md  033-48dd-complete-P2-dedupe-test-missing-timeout-and-id-cases.md  034-5a83-complete-P2-four-filter-types-entirely-untested.md  035-6532-complete-P2-broadcast-client-zero-tests.md
(+110 files in other folders)
