[project]
name = "bb"
version = "0.1.0"
description = ""
authors = [
    {name = "Robbie Byrd",email = "me@robbiebyrd.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "obd (>=0.7.3,<0.8.0)",
    "elm327-emulator (>=3.0.4,<4.0.0)",
    "rel (>=0.4.9.20,<0.5.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "websocket (>=0.2.1,<0.3.0)",
    "paho-mqtt (>=2.1.0,<3.0.0)",
    "websocket-client (>=1.8.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
